; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/part/extr_g_part_gpt.c_g_part_gpt_dumpto.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/part/extr_g_part_gpt.c_g_part_gpt_dumpto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g_part_table = type { i32 }
%struct.g_part_entry = type { i32 }
%struct.g_part_gpt_entry = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@gpt_uuid_freebsd_swap = common dso_local global i32 0, align 4
@gpt_uuid_linux_swap = common dso_local global i32 0, align 4
@gpt_uuid_dfbsd_swap = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.g_part_table*, %struct.g_part_entry*)* @g_part_gpt_dumpto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @g_part_gpt_dumpto(%struct.g_part_table* %0, %struct.g_part_entry* %1) #0 {
  %3 = alloca %struct.g_part_table*, align 8
  %4 = alloca %struct.g_part_entry*, align 8
  %5 = alloca %struct.g_part_gpt_entry*, align 8
  store %struct.g_part_table* %0, %struct.g_part_table** %3, align 8
  store %struct.g_part_entry* %1, %struct.g_part_entry** %4, align 8
  %6 = load %struct.g_part_entry*, %struct.g_part_entry** %4, align 8
  %7 = bitcast %struct.g_part_entry* %6 to %struct.g_part_gpt_entry*
  store %struct.g_part_gpt_entry* %7, %struct.g_part_gpt_entry** %5, align 8
  %8 = load %struct.g_part_gpt_entry*, %struct.g_part_gpt_entry** %5, align 8
  %9 = getelementptr inbounds %struct.g_part_gpt_entry, %struct.g_part_gpt_entry* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = call i64 @EQUUID(i32* %10, i32* @gpt_uuid_freebsd_swap)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %25, label %13

13:                                               ; preds = %2
  %14 = load %struct.g_part_gpt_entry*, %struct.g_part_gpt_entry** %5, align 8
  %15 = getelementptr inbounds %struct.g_part_gpt_entry, %struct.g_part_gpt_entry* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = call i64 @EQUUID(i32* %16, i32* @gpt_uuid_linux_swap)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %25, label %19

19:                                               ; preds = %13
  %20 = load %struct.g_part_gpt_entry*, %struct.g_part_gpt_entry** %5, align 8
  %21 = getelementptr inbounds %struct.g_part_gpt_entry, %struct.g_part_gpt_entry* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = call i64 @EQUUID(i32* %22, i32* @gpt_uuid_dfbsd_swap)
  %24 = icmp ne i64 %23, 0
  br label %25

25:                                               ; preds = %19, %13, %2
  %26 = phi i1 [ true, %13 ], [ true, %2 ], [ %24, %19 ]
  %27 = zext i1 %26 to i64
  %28 = select i1 %26, i32 1, i32 0
  ret i32 %28
}

declare dso_local i64 @EQUUID(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
